--- a/downstream/modules/platform/proc-controller-set-up-logging.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-logging.adoc
@@ -1,13 +1,15 @@
 [id="proc-controller-set-up-logging"]
-
-= Setting Up Logging
+= Setting up logging
 
 Use the following procedure to set up logging to any of the aggregator types.
 
 .Procedure
 . From the navigation panel, select {MenuSetLogging}.
 . On the *Logging settings* page, click btn:[Edit].
-. Set the following configurable options:
++
+image::logging-settings.png[Logging settings page]
++
+. You can configure the following options:
 
 * *Logging Aggregator*: Enter the hostname or IP address that you want to send logs to.
 * *Logging Aggregator Port*: Specify the port for the aggregator if it requires one.
