--- a/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
@@ -21,7 +21,7 @@ NOTE: When creating the *Ansible Automation Platform Backup* resource it also cr
 . In the *Deployment name* field, enter the name of the deployed {PlatformNameShort} instance being backed up. For example if your {PlatformNameShort} deployment must be backed up and the deployment name is aap, enter 'aap' in the *Deployment name* field.
 . Click btn:[Create].
 
-This will result in an *AnsibleAutomationPlatformBackup* resource. The following is an example of what the resource YAML will look like:
+This results in an *AnsibleAutomationPlatformBackup* resource. The  the resource YAML is similar to the following:
 
 ----
 apiVersion: aap.ansible.com/v1alpha1
@@ -43,7 +43,7 @@ To verify that your backup was successful you can:
 . Click *All Instances*.
 
 The *All Instances* page displays the main backup and the backups for each component with the name you specified when creating your backup resource. 
-The status for the following instances should state *Running* or *Successful*:
+The status for the following instances must be either *Running* or *Successful*:
 
 * AnsibleAutomationPlatformBackup
 * AutomationControllerBackup
