--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -4,7 +4,7 @@
 *AnsibleAutomationPlatform* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *AnsibleAutomationPlatform* you also restore these components.
 
 In previous versions of the {OperatorPlatform}, it was necessary to create a restore object for each component of the platform. 
-Now, you need only create a single *AnsibleAutomationPlatformRestore* resource, which will create and manage the other restore objects: 
+Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  creates and manages the other restore objects: 
 
 * AutomationControllerRestore
 * AutomationHubRestore
