--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -12,7 +12,7 @@ ifdef::context[:parent-context: {context}]
 Backing up your {PlatformName} deployment involves creating backup resources for your deployed instances. 
 Use the following procedures to create backup resources for your {PlatformName} deployment. 
 We recommend taking backups before upgrading the {OperatorPlatform}. 
-It is also a good idea to take a backup regularly in case you want to restore the platform to a previous state.
+Take a backup regularly in case you want to restore the platform to a previous state.
 
 
 //part of 2.5 release, (AAP-22178) uncomment when publishing [gmurray]
