--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -4,7 +4,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: configure-aap-operator
 
-= Configuring the {OperatorPlatform} on {OCP}
+= Configuring the Red Hat {OperatorPlatform} on {OCP}
 
 The platform gateway for {PlaformNameShort} enables you to manage the following {PlatformNameShort} components to form a single user interface:
 
