Adding note acount AWS ID

--- a/stories/topics/proc-saas-set-up-public.adoc
+++ b/stories/topics/proc-saas-set-up-public.adoc
@@ -4,7 +4,6 @@
 
 As an AWS customer you can search for and subscribe to {SaaSonAWS} from the AWS Marketplace. 
 
-
 .Procedure
 . Log in to your AWS account.
 . Navigate to the AWS Marketplace.
@@ -22,8 +21,11 @@ As an AWS customer you can search for and subscribe to {SaaSonAWS} from the AWS 
 . Click btn:[Click here to set up your account]. This redirects you to {RHSSO} where you need to:
 .. Create or sign into your Red{nbsp}Hat account.
 .. Link your AWS account to the Red{nbsp}Hat account.
-. This then directs you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
+. This then redirects you to the *Provision environment* page on the Red{nbsp}Hat Hybrid Cloud Console. Here you can start configuring your environment. 
 . Enter your AWS account ID.
++
+This account ID must be the account ID that purchased the offer from the AWS marketplace. 
+The system will not recognize associated or nested accounts.
 . Once your AWS ID is validated click btn:[Next].
 . Select your desired region.
 . Enter your email address. You will receive a notification at this email when your environment is ready.
