--- a/downstream/assemblies/platform/assembly-ag-controller-config.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-config.adoc
@@ -16,9 +16,9 @@ include::platform/proc-controller-configure-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-logging-settings.adoc[leveloffset=+1]
 //The only directly controller related thing here is the custom logo which is covered separately 
 //include::platform/proc-controller-configure-user-interface.adoc[leveloffset=+1]
-//This doesn't exisat in the documented form
 //include::platform/proc-controller-configure-usability-analytics.adoc[leveloffset=+2]
 //include::platform/con-controller-custom-logos.adoc[leveloffset=+1]
+include::platform/proc-controller-configure-analytics.adoc[leveloffset=+1]
 include::platform/con-controller-additional-settings.adoc[leveloffset=+1]
 //This should be in Hala's documentation
 //include::platform/proc-controller-obtaining-subscriptions.adoc[leveloffset=+1]
