Create Containerized AAP Troubleshooting content
Create Containerized AAP Troubleshooting content

https://issues.redhat.com/browse/AAP-15683

--- a/downstream/titles/aap-containerized-install/master.adoc
+++ b/downstream/titles/aap-containerized-install/master.adoc
@@ -11,3 +11,6 @@ include::attributes/attributes.adoc[]
 include::{Boilerplate}[]
 
 include::platform/assembly-aap-containerized-installation.adoc[leveloffset=+1]
+
+[appendix]
+include::platform/assembly-appendix-troubleshoot-containerized-aap.adoc[leveloffset=1]
