--- a/downstream/modules/hub/proc-obtain-images.adoc
+++ b/downstream/modules/hub/proc-obtain-images.adoc
@@ -20,7 +20,7 @@ New Red Hat accounts automatically use Simple Content Access for their subscript
 
 * You have permissions to pull images from registry.redhat.io.
 
-* A Red Hat account with Simple Account Access enabled.
+* A Red Hat account with Simple Content Access enabled.
 
 .Procedure
 
@@ -60,4 +60,4 @@ $ podman images
 
 * See link:redhat-connect.gitbook.io/catalog-help/[Red Hat Ecosystem Catalog Help] for information on registering and getting images.
 
-* See link:{BaseURL}subscription_central/1-latest/html/creating_and_managing_manifests_for_a_connected_satellite_server/index[Creating and managing manifests for a connected Satellite Server] to learn more about the changes coming to Red Hat subscription tooling
+* See link:{BaseURL}/subscription_central/1-latest/html/creating_and_managing_manifests_for_a_connected_satellite_server/index[Creating and managing manifests for a connected Satellite Server] to learn more about the changes coming to Red Hat subscription tooling
