Revising content of Controller Guides
Removing content covered elsewhere and rearranging content to match UI

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-controller-glossary.adoc
+++ b/downstream/assemblies/platform/assembly-controller-glossary.adoc
@@ -35,7 +35,7 @@ These pods are provisioned on-demand and exist only for the duration of the play
 === Credentials
 Authentication details that can be used by {ControllerName} to launch jobs against machines, to synchronize with inventory sources,
 and to import project content from a version control system. 
-For more information, see xref:controller-credentials[Credentials].
+For more information, see [Credentials].
 
 [discrete]
 === Credential Plugin
