--- a/downstream/modules/platform/con-controller-role-based-access-controls.adoc
+++ b/downstream/modules/platform/con-controller-role-based-access-controls.adoc
@@ -2,6 +2,7 @@
 
 = Role-based access controls
 
+//Not sure whether this is still true.
 To edit and delete a workflow job template, you must have the administrator role. 
 To create a workflow job template, you must be an organization administrator or a system administrator. 
 However, you can run a workflow job template that contains job templates that you do not have permissions for. 
@@ -13,4 +14,4 @@ You must have permissions to all the resources used in a workflow, such as job t
 
 For more information, see xref:con-controller-rbac[Role-based access controls].
 
-For more information on performing the tasks described in this section, see the link:http://docs.ansible.com/automation-controller/4.4/html/administration/index.html#ag-start[Administration Guide].
+For more information on performing the tasks described in this section, see xref:controller-workflow-job-templates[Workflow job templates].
