--- a/downstream/modules/platform/proc-controller-amazon-ec2.adoc
+++ b/downstream/modules/platform/proc-controller-amazon-ec2.adoc
@@ -13,7 +13,7 @@ Use the following procedure to configure an AWS EC2-sourced inventory.
 . The *Add new source* window expands with additional fields.
 Enter the following details:
 
-* Optional: *Credential*: Choose from an existing AWS credential (for more information, see xref:controller-credentials[Credentials]).
+* Optional: *Credential*: Choose from an existing AWS credential (for more information, see[Credentials]).
 +
 If {ControllerName} is running on an EC2 instance with an assigned IAM Role, the credential can be omitted, and the security credentials from
 the instance metadata are used instead.
