--- a/downstream/modules/platform/proc-controller-azure-resource-manager.adoc
+++ b/downstream/modules/platform/proc-controller-azure-resource-manager.adoc
@@ -12,7 +12,7 @@ Use the following procedure to configure an {Azure} Resource Manager-sourced inv
 . In the *Add new source* page, select *Microsoft Azure Resource Manager* from the *Source* list.
 . The *Add new source* window expands with the required *Credential* field.
 Choose from an existing Azure Credential.
-For more information, see xref:controller-credentials[Credentials].
+For more information, see [Credentials].
 
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Use the *Source Variables* field to override variables used by the `azure_rm` inventory plugin.
