--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -1,8 +1,8 @@
 [id="proc-define-mesh-node-types"]
 
-ifdef::controller-AG[]
+ifdef::controller-UG[]
 = Managing instances
-endif::controller-AG[]
+endif::controller-UG[]
 ifdef::operator-mesh[]
 = Defining {AutomationMesh} node types
 endif::operator-mesh[]
@@ -70,9 +70,9 @@ image::instances_create_details.png[Create Instance details]
 ifdef::operator-mesh[]
 . To view a graphical representation of your updated topology, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
 endif::operator-mesh[]
-ifdef::controller-AG[]
+ifdef::controller-UG[]
 . To view a graphical representation of your updated topology, see xref:assembly-controller-topology-viewer[Topology viewer].
-endif::controller-AG[]
+endif::controller-UG[]
 +
 [NOTE]
 ====
@@ -170,6 +170,6 @@ ifdef::operator-mesh[]
 To remove an instance from the mesh, see xref:ref-removing-instances[Removing instances].
 endif::operator-mesh[]
 
-ifdef::controller-AG[]
-To remove an instance from the mesh, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/assembly-automation-mesh-operator-aap#ref-removing-instances[Removing instances].
-endif::controller-AG[]
+ifdef::controller-UG[]
+To remove an instance from the mesh, see xref:ref-removing-instances[Removing instances].
+endif::controller-UG[]
