--- a/downstream/modules/platform/ref-controller-credentials-getting-started.adoc
+++ b/downstream/modules/platform/ref-controller-credentials-getting-started.adoc
@@ -38,7 +38,7 @@ A credential with roles associated retains them if the credential is reassigned 
 
 Click btn:[Add] to assign the *Demo Credential* to additional users.
 If no users exist, add them by selecting {MenuControllerUsers} from the navigation panel.
-For more information, see xref:assembly-controller-users[Users].
+For more information, see [Users].
 
 Select the *Job Templates* tab to display the job templates associated with this credential, and which jobs have run recently using this credential.
 
