--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -24,9 +24,11 @@ include::platform/assembly-inventory-file-importing.adoc[leveloffset=+1]
 //include::platform/assembly-multi-credential-assignment.adoc[leveloffset=+1]
 include::platform/assembly-controller-management-jobs.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-clustering.adoc[leveloffset=+1]
+//Removed to user Guide
+//include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
-include::platform/assembly-controller-instances.adoc[leveloffset=+1]
-include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
+//Removed to User Guide
+//include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
 include::platform/assembly-controller-log-files.adoc[leveloffset=+1]
 //Lizzi's work: Logging removed at 2.5-next
 include::platform/assembly-controller-logging-aggregation.adoc[leveloffset=+1]
