--- a/downstream/modules/platform/con-controller-views.adoc
+++ b/downstream/modules/platform/con-controller-views.adoc
@@ -1,16 +1,15 @@
 [id="con-controller-views"]
 
 = Views
+//No longer required in 2.5 version
 
 The {ControllerName} UI provides several options for viewing information.
 
 * xref:proc-controller-viewing-dashboard[Dashboard view]
-* xref:proc-controller-jobs-view[Jobs view]
-//The following aren't included in the Views menu for the tech preview. 
+* xref:proc-controller-jobs-view[Jobs view] 
 * xref:proc-controller-schedules-view[Schedules view]
 * xref:proc-controller-activity-stream[Activity Stream]
 * xref:proc-controller-workflow-approvals[Workflow Approvals]
-//Host Metrics is included in the Analytics menu
 * xref:proc-controller-host-metrics[Host Metrics]
 
 include::proc-controller-viewing-dashboard.adoc[leveloffset=+1]
