--- a/downstream/modules/platform/proc-controller-inv-source-gce.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-gce.adoc
@@ -11,7 +11,7 @@ Use the following procedure to configure a Google-sourced inventory:
 . In the *Add new source* page, select *Google Compute Engine* from the *Source* list.
 . The *Add new source* window expands with the required *Credential* field.
 Choose from an existing GCE Credential.
-For more information, see xref:controller-credentials[Credentials].
+For more information, see [Credentials].
 //+
 //image:inventories-create-source-GCE-example.png[Inventories- create source - GCE example]
 
