--- a/downstream/modules/platform/proc-controller-inv-source-rh-virt.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-rh-virt.adoc
@@ -11,7 +11,7 @@ Use the following procedure to configure a Red Hat virtualization-sourced invent
 . In the *Add new source* page, select *Red Hat Virtualization* from the *Source* list.
 . The *Add new source* window expands with the required *Credential* field.
 Choose from an existing Red Hat Virtualization Credential.
-For more information, see xref:controller-credentials[Credentials].
+For more information, see [Credentials].
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Use the *Source Variables* field to override variables used by the `ovirt` inventory plugin.
 Enter variables by using either JSON or YAML syntax.
