--- a/downstream/modules/platform/proc-controller-inv-source-vm-vcenter.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-vm-vcenter.adoc
@@ -11,7 +11,7 @@ Use the following procedure to configure a VMWare-sourced inventory.
 . In the *Add new source* page, select *VMware vCenter* from the *Source* list.
 . The *Add new source* window expands with the required *Credential* field.
 Choose from an existing VMware Credential.
-For more information, see xref:controller-credentials[Credentials].
+For more information, see [Credentials].
 
 . Optional: You can specify the verbosity, host filter, enabled variables or values, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Use the *Source Variables* field to override variables used by the `vmware_inventory` inventory plugin.
