--- a/downstream/modules/platform/ref-controller-approval-nodes.adoc
+++ b/downstream/modules/platform/ref-controller-approval-nodes.adoc
@@ -2,7 +2,7 @@
 
 = Approval nodes
 
-Choosing an *Approval* node requires your intervention in order to advance the workflow. 
+Choosing an *Approval* node requires your intervention in order to advance a workflow. 
 This functions as a means to pause the workflow in between playbooks so that you can give approval to continue on to the next playbook in the workflow.
 This gives the user a specified amount of time to intervene, but also enables you to continue as quickly as possible without having to wait on another trigger.
 
