--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -24,32 +24,39 @@ include::platform/assembly-UG-overview.adoc[leveloffset=+1]
 include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
 include::platform/assembly-controller-login.adoc[leveloffset=+1]
 include::platform/assembly-controller-managing-subscriptions.adoc[leveloffset=+1]
+//Rewritten for 2.5
 include::platform/assembly-controller-user-interface.adoc[leveloffset=+1]
 include::platform/assembly-controller-search.adoc[leveloffset=+1]
-include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
-include::platform/assembly-controller-users.adoc[leveloffset=+1]
-include::platform/assembly-controller-teams.adoc[leveloffset=+1]
-include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
-//In the new UI, Credential types is part of Credentials.
-include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
-include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
-include::platform/assembly-controller-applications.adoc[leveloffset=+1]
-include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
-include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
-include::platform/assembly-controller-projects.adoc[leveloffset=+1]
-include::platform/assembly-controller-project-signing.adoc[leveloffset=+1]
-include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
-include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-jobs.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-job-templates.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-job-slicing.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
+//Maybe this should go in workflow  approvals?
 include::platform/assembly-ug-controller-workflow-job-templates.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-schedules.adoc[leveloffset=+1]
+include::platform/assembly-controller-projects.adoc[leveloffset=+1]
+include::platform/assembly-controller-project-signing.adoc[leveloffset=+1]
+include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
+include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
+include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
+include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-instance-groups.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-jobs.adoc[leveloffset=+1]
+include::platform/assembly-controller-execution-environments.adoc[leveloffset=+1]
+include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
+//Moved to Donna's Access management document
+//include::platform/assembly-controller-organizations.adoc[leveloffset=+1]
+//include::platform/assembly-controller-users.adoc[leveloffset=+1]
+//include::platform/assembly-controller-teams.adoc[leveloffset=+1]
+//Possibly in Donna's credentials document
+//include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
+//include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
+
+include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
+//include::platform/assembly-controller-applications.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-notifications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-attributes-custom-notifications.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-schedules.adoc[leveloffset=+1]
+
 include::platform/assembly-ug-controller-setting-up-insights.adoc[leveloffset=+1]
 include::platform/assembly-controller-best-practices.adoc[leveloffset=+1]
 include::platform/assembly-controller-security.adoc[leveloffset=+1]
