Revising content of Controller User Guide
Cleared xrefs

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/con-controller-administration.adoc
+++ b/downstream/modules/platform/con-controller-administration.adoc
@@ -6,10 +6,10 @@ The *Administration* menu provides access to the administrative options of {Cont
 From here, you can create, view, and edit:
 
 //activity stream is an unconnected procedure. It needs a home.
-* xref:proc-controller-activity-stream[Activity Stream]
+* [Activity Stream]
 * xref:controller-approval-nodes[Workflow Approvals]
 * xref:controller-notifications[Notifications]
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-management-jobs[Management Jobs]
+* link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/automation_controller_administration_guide/assembly-controller-management-jobs[Management Jobs]
 
 
 
