--- a/downstream/modules/platform/con-controller-infrastructure.adoc
+++ b/downstream/modules/platform/con-controller-infrastructure.adoc
@@ -8,8 +8,7 @@ The *Infrastucture* menu provides quick access to {ControllerName} resources suc
 * xref:controller-inventories[Inventories]
 * Hosts
 * xref:controller-instance-groups[Instance Groups]
-//Move this from Admin Guide (redo conditionals)
-* Instances
+* xref:assembly-controller-instances[Instances]
 * xref:assembly-controller-execution-environments[Execution Environments]
 //Maybe separate
 //* Credentials
