--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -2,15 +2,12 @@
 
 = The Settings menu
 
-Configure global and system-level settings using the *Settings* menu. 
-The *Settings* menu provides access to {ControllerName} configuration settings.
+You can configure some {ControllerName} options using the *Settings* menu of the User Interface. 		
+
 
 The *Settings* page enables administrators to configure the following:
 
-* Authentication
-* Jobs
-* System-level attributes
-* Customize the UI
-* Product license information
-
-//include::settings-menu.adoc[]
+* Subscriptions TBD
+* System TBD
+* Jobs TBD
+* {Analytics} TBD
