--- a/downstream/modules/platform/proc-controller-configure-secret-lookups.adoc
+++ b/downstream/modules/platform/proc-controller-configure-secret-lookups.adoc
@@ -52,7 +52,7 @@ You return to the *Details* screen of your target credential.
 . Repeat these steps, starting with Step 3 to complete the remaining input fields for the target credential. 
 By linking the information in this manner, {ControllerName} retrieves sensitive information, such as username, password, keys, certificates, and tokens from the third-party management systems and populates the remaining fields of the target credential form with that data.
 . If necessary, supply any information manually for those fields that do not use linking as a way of retrieving sensitive information. 
-For more information about each of the fields, see the appropriate xref:ref-controller-credential-types[Credential Types].
+For more information about each of the fields, see the appropriate [Credential Types].
 . Click btn:[Save].
 
 .Additional resources
