--- a/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-github-webhook.adoc
@@ -28,7 +28,7 @@ You cannot access this token again in GitHub.
 ====
 +
 . Use the PAT to optionally create a GitHub credential:
-.. Go to your instance, and xref:ref-controller-credential-gitHub-pat[Create a new credential for the GitHub PAT] using the generated token.
+.. Go to your instance, and TBD[Create a new credential for the GitHub PAT] using the generated token.
 .. Make note of the name of this credential, as you use it in the job template that posts back to GitHub.
 +
 image::ug-webhooks-github-PAT-token.png[GitHub PAT token]
