--- a/downstream/modules/platform/proc-controller-create-workflow-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-workflow-template.adoc
@@ -82,7 +82,7 @@ GitHub and GitLab are the supported SCM systems.
 ** If you enable webhooks, other fields display, prompting for additional information:
 *** *Webhook service*: Select which service to listen for webhooks from.
 *** *Webhook credential*: Optionally, provide a GitHub or GitLab personal access token (PAT) as a credential to use to send status updates back to the webhook service.
-For more information, see xref:ref-controller-credential-types[Credential Types] to create one.
+For more information, see TBD[Credential Types] to create one.
 +
 ** When you click btn:[Create workflow job template], additional fields populate and the workflow visualizer automatically opens.
 *** *Webhook URL*: Automatically populated with the URL for the webhook service to POST requests to.
