--- a/lightspeed/modules/con_wca-key-model-id.adoc
+++ b/lightspeed/modules/con_wca-key-model-id.adoc
@@ -3,11 +3,17 @@
 [id="wca-key-model-id_{context}"]
 = Configuration requirements
 
-To use {LightspeedFullName}, your organization must have the following subscriptions:
+To use the {LightspeedShortName} cloud service, your organization must have the following subscriptions:
 
 * A trial or paid subscription to {PlatformName} 
 
 * A trial or paid subscription to {ibmwatsonxcodeassistant}
+
+To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
+
+* A trial or paid subscription to {PlatformName} 
+
+* An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
 
 You need the following {ibmwatsonxcodeassistant} information:
 
