AAP-25608: Added VS Code connectivity requirements

--- a/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
+++ b/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
@@ -15,6 +15,15 @@ To access {LightspeedShortName}, all Ansible users must install and configure th
 
 You can also use a custom, fine-tuned model if your organization administrator has created a custom model and has shared the model ID with you separately. Use the *model-override* setting in the Ansible VS Code extension to override the default model, and use the custom model instead. Using a custom model enables you to improve the code recommendation experience and tune the model to your organizational automation patterns. For example, if you are using {LightspeedShortName} both as an organization administrator and a user, you can test the custom model for select Ansible users before making it available for all users in your organization. For more information, see xref:configuring-custom-models_set-up-lightspeed[Configuring custom models]. 
 
+== Connectivity requirements
+To generate code recommendations, the Ansible Lightspeed service in Visual Studio (VS) Code editor requires access to the following outbound domains:
+
+* https://c.ai.ansible.redhat.com
+* https://console.redhat.com
+* https://access.redhat.com
+
+The outbound connections are encrypted on TCP protocol port 443.
+
 include::modules/proc_install-vscode-extension.adoc[leveloffset=+1]
 include::modules/proc_configure-vscode-extension.adoc[leveloffset=+1]
 include::modules/proc_login-vscode-extension.adoc[leveloffset=+1]
