--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -4,12 +4,28 @@
 
 = Using {LightspeedShortName} with {ibmwatsonxcodeassistant}
 
-.Prerequisites
+== Prerequisites
 
-To use {LightspeedShortName}, ensure that you have the following components:
+To use {LightspeedShortName} cloud service, ensure that you have the following components:
 
 * Trial or paid subscription to {PlatformNameShort}
 * Trial or paid subscription to {ibmwatsonxcodeassistant}
 * VS Code version 1.70.1 or later
 * The Ansible extension for VS Code version 2.8 or later
+
+To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
+
+* A trial or paid subscription to {PlatformName} 
+
+* An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
+
+== Connectivity requirements
+To generate code recommendations, the Ansible Lightspeed service in Visual Studio (VS) Code editor requires access to the following outbound domains:
+
+* https://c.ai.ansible.redhat.com
+* https://console.redhat.com
+* https://access.redhat.com
+
+The outbound connections are encrypted on TCP protocol port 443.
+
 
