Commit for AAP-22613 Remove SSO deployment references
This commit encompasses AAP-22613, it also includes removing any reference
to LDAP configuration. Both SSO and LDAP refernces are being removed due
to an approach change to installation of the AAP platform.

Resolves: AAP-22613

--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -43,14 +43,16 @@ include::platform/ref-single-controller-ext-installer-managed-db.adoc[leveloffse
 //include::platform/ref-single-eda-controller-with-internal-db.adoc[leveloffset=+3]
 //include::platform/ref-standalone-hub-inventory.adoc[leveloffset=+3]
 include::platform/ref-standalone-controller-hub-ext-database-inventory.adoc[leveloffset=+3]
-include::platform/ref-connect-hub-to-rhsso.adoc[leveloffset=+4]
+//[rjgrange] Removed for AAP-22613 Removing all references to SSO and LDAP installation
+//include::platform/ref-connect-hub-to-rhsso.adoc[leveloffset=+4]
 include::platform/con-ha-hub-installation.adoc[leveloffset=+4]
 include::platform/proc-install-ha-hub-selinux.adoc[leveloffset=+4]
 include::platform/proc-configure-pulpcore-service.adoc[leveloffset=+4]
 include::platform/proc-apply-selinux-context.adoc[leveloffset=+4]
 include::hub/hub/proc-configure-content-signing-on-pah.adoc[leveloffset=+3]
-include::platform/ref-ldap-config-on-pah.adoc[leveloffset=+3]
-include::platform/ref-ldap-referrals.adoc[leveloffset=+3]
+//[rjgrange] Removed for AAP-22613 Removing all references to SSO and LDAP installation
+//include::platform/ref-ldap-config-on-pah.adoc[leveloffset=+3]
+//include::platform/ref-ldap-referrals.adoc[leveloffset=+3]
 include::platform/ref-single-controller-hub-eda-with-managed-db.adoc[leveloffset=+3]
 //[ifowler] Removed for AAP-18700 Install Guide Scenario Consolidation  
 //include::platform/ref-standalone-hub-ext-database-customer-provided.adoc[leveloffset=+3]
