--- a/downstream/modules/platform/con-ha-hub-installation.adoc
+++ b/downstream/modules/platform/con-ha-hub-installation.adoc
@@ -5,7 +5,7 @@
 Use the following examples to populate the inventory file to install a highly available {HubName}. This inventory file includes a highly available {HubName} with a clustered setup.
 
 //dcdacosta - include a link to the RHSSO content once it's added.
-You can configure your HA deployment further to implement {RHSSO} and enable a xref:proc-install-ha-hub-selinux[high availability deployment of {HubName} on SELinux].
+You can configure your HA deployment further to enable a xref:proc-install-ha-hub-selinux[high availability deployment of {HubName} on SELinux].
 
 .Specify database host IP
 
