AAP-13268-EDA updated examples

--- a/downstream/modules/eda/proc-modifying-activations-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-during-install.adoc
@@ -9,6 +9,6 @@ By default, {EDAcontroller} allows 12 activations to run simultaneously. You can
 Provide a variable to the VM installer:
 
 . Navigate to the setup inventory file. 
-. Add `automationedacontroller_max_running_activations` under [all:vars] section.
+. Add `automationedacontroller_max_running_activations` under [all:vars] section. For example, `automationedacontroller_max_running_activations=16`.
 
 Run the setup
