--- a/downstream/modules/eda/proc-modifying-memory-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-during-install.adoc
@@ -7,5 +7,5 @@ By default, each rulebook activation container has a 200mb memory limit. You can
 
 .Procedure
 . Navigate to the setup inventory file.
-. Add `automationedacontroller_podman_mem_limit` under [all:vars] section. For example, `automationedacontroller_podman_mem_limit=400m`. 
+. Add `automationedacontroller_podman_mem_limit` under [all:vars] section. For example, `automationedacontroller_podman_mem_limit='400m'`. 
 . Run the setup.
