updates based on peer review feedback

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -14,7 +14,7 @@
 +
 Decide where you want the installation program to reside on the filesystem. Installation related files will be created under this location and require at least 10Gb for the initial installation.
 +
-. Unpack the installation program .tar file into your installation directory, and cd into the unpacked directory. 
+. Unpack the installation program .tar file into your installation directory, and navigate to the unpacked directory. 
 +
 .. online installer
 +
