AAP-13268-EDA updates

--- a/downstream/modules/eda/proc-modifying-memory-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-after-install.adoc
@@ -1,4 +1,4 @@
-[id="proc-modifying-memory-after-install"]
+[id="modifying-memory-after-install"]
 
 = Modifying the default memory limit for each rulebook activation after installation
 
@@ -7,5 +7,5 @@ By default, each rulebook activation container has a 200mb memory limit. You can
 
 .Procedure
 . Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
-. Modify the default container memory limit. For example, `EDA_PODMAN_MEM_LIMIT = 300m`.
+. Modify the default container memory limit. For example, `EDA_PODMAN_MEM_LIMIT = '300m'`.
 . Restart the {EDAcontroller} services using `systemctl restart automation-eda-controller.target`.
