--- a/downstream/modules/eda/ref-performance-troubleshooting.adoc
+++ b/downstream/modules/eda/ref-performance-troubleshooting.adoc
@@ -1,4 +1,4 @@
-[id="ref-performance-troubleshooting"]
+[id="performance-troubleshooting"]
 
 =  Performance Troubleshooting for {EDAcontroller}
 
@@ -14,7 +14,7 @@ Based on the default parameters within {EDAcontroller}, you might encounter scen
 * My activation keeps restarting in an infinite loop.
 ** By default, the reset policy for rulebook activations is set to “on failure”. The restart policy can be changed by using the following procedure:
 
-*** *Procedure*
+***Procedure
 . Navigate to the Rulebook Activation screen.
 . Click the Restart Policy drop down menu. 
 . Choose the appropriate value: “On Failure”, “Always”, “Never”.
