--- a/downstream/modules/eda/con-modifying-memory-limit.adoc
+++ b/downstream/modules/eda/con-modifying-memory-limit.adoc
@@ -1,4 +1,4 @@
-[id="con-modifying-memory-limit"]
+[id="modifying-memory-limit"]
 
 =  Modifying the default memory limit for each rulebook activation
 
@@ -12,6 +12,3 @@ To address this failure, you can increase the amount of memory allocated to rule
 
 include::proc-modifying-memory-during-install.adoc[leveloffset=+1]
 include::proc-modifying-memory-after-install.adoc[leveloffset=+1]
-
-.Resources 
-For more information about rulebook activations, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/event-driven_ansible_controller_user_guide/index#eda-rulebook-activations[Rulebook activations].
