Revising content of Controller Guides
Further changes

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-ug-controller-workflow-job-templates.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-workflow-job-templates.adoc
@@ -2,6 +2,10 @@
 
 = Workflow job templates
 
+You can create both Job templates and Workflow job templates from {MenuAETemplates}.
+
+For Job templates, see xref:controller-job-templates[Job templates].
+
 A workflow job template links together a sequence of disparate resources that tracks the full set of jobs that were part of the release process as a single unit. 
 These resources include the following:
 
@@ -10,7 +14,7 @@ These resources include the following:
 * Project syncs
 * Inventory source syncs
 
-The *Templates* list view shows the workflow and job templates that are currently available. 
+The *Templates* page shows the workflow and job templates that are currently available. 
 The default view is collapsed (Compact), showing the template name, template type, and the statuses of the jobs that have run by using that template. 
 You can click the arrow next to each entry to expand and view more information. 
 This list is sorted alphabetically by name, but you can sort by other criteria, or search by various fields and attributes of a template.
