--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -32,8 +32,9 @@ include::platform/assembly-ug-controller-jobs.adoc[leveloffset=+1]
 //Templates
 include::platform/assembly-ug-controller-job-templates.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-job-slicing.adoc[leveloffset=+1]
-//Maybe this should go in workflow  approvals?
+//This includes workflow  approvals.
 include::platform/assembly-ug-controller-workflow-job-templates.adoc[leveloffset=+1]
+include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
 //Schedules
 include::platform/assembly-ug-controller-schedules.adoc[leveloffset=+1]
 //Projects
@@ -60,7 +61,6 @@ include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
 //include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
 include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
 //include::platform/assembly-controller-applications.adoc[leveloffset=+1]
-include::platform/assembly-ug-controller-workflows.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-notifications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-attributes-custom-notifications.adoc[leveloffset=+1]
