--- a/downstream/assemblies/platform/assembly-ug-controller-job-templates.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-job-templates.adoc
@@ -2,18 +2,24 @@
 
 = Job templates
 
+You can create both Job templates and Workflow job templates from {MenuAETemplates}.
+
+For Workflow job templates, see xref:controller-workflow-job-templates[Workflow job templates].
+
 A job template is a definition and set of parameters for running an Ansible job. 
 Job templates are useful to run the same job many times. 
 They also encourage the reuse of Ansible Playbook content and collaboration between teams.
 
-The *Templates* list view shows job templates that are currently available. 
+The *Templates* page shows both job templates and workflow job templates that are currently available. 
 The default view is collapsed (Compact), showing the template name, template type, and the timestamp of the last job that ran using that template. 
 You can click the arrow image:arrow.png[Arrow,15,15] icon next to each entry to expand and view more information. 
 This list is sorted alphabetically by name, but you can sort by other criteria, or search by various fields and attributes of a template.
 
 //image::ug-job-templates-home.png[Job templates home]
 
-From this screen you can launch image:rightrocket.png[Rightrocket,15,15], edit image:leftpencil.png[Leftpencil,15,15], copy image:copy.png[Copy,15,15] and delete image:delete-button.png[Delete,15.15] a job template. 
+From this screen you can launch image:rightrocket.png[Rightrocket,15,15], edit image:leftpencil.png[Leftpencil,15,15], copy image:copy.png[Copy,15,15] and delete image:delete-button.png[Delete,15.15] a job template.
+
+Workflow templates have the workflow visualizer image:visualizer.png[Workflow visualizer,15,15] icon as a shortcut for accessing the workflow editor.
 
 [NOTE]
 ====
