--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -5,13 +5,15 @@
 .Procedure
 
 . From the navigation panel, select {MenuAETemplates}.
-. On the *Templates* list view, select *Create job template* from the *Create template* list.
+. On the *Templates* page, select *Create job template* from the *Create template* list.
 . Enter the appropriate details in the following fields:
 +
 [NOTE]
 ====
 If a field has the *Prompt on launch* checkbox selected, launching the job prompts you for the value for that field when launching.
+
 Most prompted values override any values set in the job template.
+
 Exceptions are noted in the following table.
 ====
 +
@@ -79,15 +81,6 @@ When a label is removed, it is no longer associated with that particular Job or 
 - Jobs inherit labels from the Job Template at the time of launch.
 If you delete a label from a Job Template, it is also deleted from the Job. a| - If selected, even if a default value is supplied, you are prompted when launching to supply additional labels, if needed.
 - You cannot delete existing labels, selecting image:disassociate.png[Disassociate,10,10] only removes the newly added labels, not existing default labels.
-| Variables a| - Pass extra command line variables to the playbook.
-This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_variables.html#defining-variables-at-runtime[Defining variables at runtime].
-- Provide key or value pairs by using either YAML or JSON.
-These variables have a maximum value of precedence and overrides other variables specified elsewhere.
-The following is an example value:
-`git_branch: production
-release_version: 1.5` | Yes.
-
-If you want to be able to specify `extra_vars` on a schedule, you must select *Prompt on launch* for Variables on the job template, or enable a survey on the job template. Those answered survey questions become `extra_vars`.
 | Forks | The number of parallel or simultaneous processes to use while executing the playbook.
 A value of zero uses the Ansible default setting, which is five parallel processes unless overridden in `/etc/ansible/ansible.cfg`. | Yes
 | Limit a| A host pattern to further constrain the list of hosts managed or affected by the playbook. You can separate many patterns by colons (:).
@@ -133,9 +126,18 @@ If selected, you are providing the jobs preferred instance groups in order of pr
 For more information and examples see link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_tags.html[Tags] in the Ansible documentation. | Yes
 | Skip Tags | Type and select the *Create* menu to specify certain tasks or parts of the playbook to skip.
 For more information and examples see link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_tags.html[Tags] in the Ansible documentation. | Yes
+| Extra Variables a| - Pass extra command line variables to the playbook.
+This is the "-e" or "-extra-vars" command line parameter for ansible-playbook that is documented in the Ansible documentation at link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_variables.html#defining-variables-at-runtime[Defining variables at runtime].
+- Provide key or value pairs by using either YAML or JSON.
+These variables have a maximum value of precedence and overrides other variables specified elsewhere.
+The following is an example value:
+`git_branch: production
+release_version: 1.5` | Yes.
+
+If you want to be able to specify `extra_vars` on a schedule, you must select *Prompt on launch* for Variables on the job template, or enable a survey on the job template. Those answered survey questions become `extra_vars`.
 |===
 +
-. Specify the following options for launching this template, if necessary:
+. You can set the following options for launching this template, if necessary:
 * *Privilege escalation*: If checked, you enable this playbook to run as an administrator.
 This is the equal of passing the `--become` option to the `ansible-playbook` command.
 * *Provisioning callback*: If checked, you enable a host to call back to {ControllerName} through the REST API and start a job from this job template.
