Update containerized install guide to incorporate gateway (#1506)
* Update containerized install guide to incorporate gateway
https://issues.redhat.com/browse/AAP-18760

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -8,23 +8,23 @@
 
 .Procedure
 
-. Download the latest installer tarball from link:https://access.redhat.com/downloads/content/480/ver=2.4/rhel---9/2.4/x86_64/product-software[access.redhat.com]. This can be done directly within the RHEL host, which saves time.
+. Download the latest installer .tar file from link:{PlatformDownloadUrl}[access.redhat.com]. This can be done directly within the {RHEL} host, which saves time.
 
-. If you have downloaded the tarball and optional manifest zip file onto your laptop, copy them onto your RHEL host.
+. If you have downloaded the .tar file and optional manifest .zip file onto your laptop, copy them onto your {RHEL} host.
 +
-Decide where you would like the installer to reside on the filesystem. Installation related files will be created under this location and require at least 10Gb for the initial installation.
+Decide where you want the installation program to reside on the filesystem. Installation related files will be created under this location and require at least 10Gb for the initial installation.
 +
-. Unpack the installer tarball into your installation directory, and cd into the unpacked directory. 
+. Unpack the installation program .tar file into your installation directory, and navigate to the unpacked directory. 
 +
 .. online installer
 +
 ----
-$ tar xfvz ansible-automation-platform-containerized-setup-2.4-2.tar.gz
+$ tar xfvz ansible-automation-platform-containerized-setup-<version>.tar.gz
 ----
 +
 .. bundled installer
 +
 ----
-$ tar xfvz ansible-automation-platform-containerized-setup-bundle-2.4-2-<arch name>.tar.gz
+$ tar xfvz ansible-automation-platform-containerized-setup-bundle-<version>-<arch name>.tar.gz
 ----
 
