--- a/downstream/modules/platform/ref-using-custom-tls-certificates.adoc
+++ b/downstream/modules/platform/ref-using-custom-tls-certificates.adoc
@@ -8,7 +8,7 @@
 
 [role="_abstract"]
 
-By default, the installer generates TLS certificates and keys for all services which are signed by a custom Certificate Authority (CA). You can provide a custom TLS certificate/key for each service. If that certificate is signed by a custom CA, you must provide the CA TLS certificate and key.
+By default, the installer generates TLS certificates and keys for all services that are signed by a custom Certificate Authority (CA). You can provide a custom TLS certificate and key for each service. If that certificate is signed by a custom CA, you must provide the CA TLS certificate and key.
 
 * Certificate Authority
 ----
@@ -16,19 +16,25 @@ ca_tls_cert=/full/path/to/tls/certificate
 ca_tls_key=/full/path/to/tls/key
 ----
 
-* Automation Controller
+* Platform gateway
+----
+gateway_tls_cert=/full/path/to/tls/certificate
+gateway_tls_key=/full/path/to/tls/key
+----
+
+* {ControllerNameStart}
 ----
 controller_tls_cert=/full/path/to/tls/certificate
 controller_tls_key=/full/path/to/tls/key
 ----
 
-* Automation Hub
+* {HubNameStart}
 ----
 hub_tls_cert=/full/path/to/tls/certificate
 hub_tls_key=/full/path/to/tls/key
 ----
 
-* Automation EDA
+* {EDAName}
 ----
 eda_tls_cert=/full/path/to/tls/certificate
 eda_tls_key=/full/path/to/tls/key
