--- a/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
+++ b/downstream/assemblies/platform/assembly-aap-containerized-installation.adoc
@@ -15,28 +15,27 @@ endif::[]
 :context: aap-containerized-installation
 
 [role="_abstract"]
-Ansible Automation Platform is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
+{PlatformNameShort} is a commercial offering that helps teams manage complex multitiered deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-This guide helps you to understand the installation requirements and processes behind our new containerized version of Ansible Automation Platform. This initial version is based upon {PlatformNameShort} 2.4 and is being released as a Technical Preview. Please see link:https://access.redhat.com/support/offerings/techpreview[Technology Preview Features Support Scope] to understand what a technical preview entails.
-
+This guide helps you to understand the installation requirements and processes behind the containerized version of {PlatformNameShort}. 
 
 .Prerequisites
 
-* A RHEL 9.2 based host. Minimal OS base install is recommended.
-* A non-root user for the RHEL host, with sudo or other Ansible supported privilege escalation (sudo recommended). This user is responsible for the installation of containerized {PlatformNameShort}.
-* It is recommended setting up an *SSH public key authentication* for the non-root user. For guidelines on setting up an SSH public key authentication for the non-root user, see link:https://access.redhat.com/solutions/4110681[How to configure SSH public key authentication for passwordless login].
-* SSH keys are only required when installing on remote hosts. If doing a self contained local VM based installation, you can use *ansible_connection: local* as per the example which does not require SSH.
-* Internet access from the RHEL host if using the default online installation method.
+* A RHEL 9.2 based host. Minimal operating system (OS) base install is recommended.
+* A non-root user for the {RHEL} host, with sudo or other Ansible supported privilege escalation (sudo recommended). This user is responsible for the installation of containerized {PlatformNameShort}.
+* It is recommended that you set up an *SSH public key authentication* for the non-root user. For guidelines on setting up an SSH public key authentication for the non-root user, see link:https://access.redhat.com/solutions/4110681[How to configure SSH public key authentication for passwordless login].
+* SSH keys are only required when installing on remote hosts. If doing a self contained local VM based installation, you can use *ansible_connection: local*.
+* Internet access from the {RHEL} host if using the default online installation method.
 
 == System Requirements
-Your system must meet the following minimum system requirements to install and run Red Hat Containerized Ansible Automation Platform. 
+Your system must meet the following minimum system requirements to install and run Red Hat Containerized {PlatformNameShort}. 
 
 [cols=2]
 |======================
 | Memory     | 16Gb RAM
 | CPU        | 4 CPU   
 | Disk space | 40Gb  
-| Disk IOPs  | 1500    
+| Disk IOPS  | 1500    
 |======================
 
 
