Revising content of controller guides
Correction

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -14,7 +14,7 @@ include::attributes/attributes.adoc[]
 Thank you for your interest in {PlatformName} {ControllerName}.
 {ControllerNameStart} helps teams manage complex multitiered deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-The {ControllerNameStart} User Guide describes all of the functionality available in {ControllerName}.
+Using {ControllerName} describes all of the functionality available in {ControllerName}.
 It assumes moderate familiarity with Ansible, including concepts such as playbooks, variables, and tags.
 For more information about these and other Ansible concepts, see the link:https://docs.ansible.com/[Ansible documentation].
 
